别吵，我还在烧烤

--- a/exercise/goose.html
+++ b/exercise/goose.html
@@ -110,7 +110,7 @@
 							<span style="font-size: 5px;color: #949494;">创建</span>
 						</div>
 						<div class="function">
-							<span class="Button">&nbsp;&nbsp;播放全部</span>
+							<span class="Button" style="background-color: #e04b4b; color: #ffffff;">&nbsp;&nbsp;播放全部</span>
 							<span class="Button">&nbsp;&nbsp;收藏</span>
 							<span class="Button">&nbsp;&nbsp;下载</span>
                             <span class="Button" style="padding-left: 3px;">&nbsp;&nbsp;···</span>
@@ -165,7 +165,7 @@
 					</div>
 					<input type="radio" id="follower" name="tablist" />
 					<div class="shifttar followerlist hidden">
-						<p style="color:#ccc; margin: auto;text-align: center;">-- 空空如也 --</p>
+						<p style="color:#ccc; margin: auto;text-align: center;padding-top: 100px;">-- 空空如也 --</p>
 					</div>
 				</div>
 			</div>
